- fix：修复了不能改简介的问题；             - fix：修复了编辑状态文本框会随着内容无限变长的问题；             - 增加了编辑状态文本框可自由调节功能；             - fix：修复了联机更改pl身份可能覆盖数据内容的问题             - 增加了自动备份：默认每 60 分钟备份,默认情况保留 3 天内存档,每次最多保留 5 个
